[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["jmarkin <yurmarkin97@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.12"
hachiko = "^0.3.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"
pytest = "^5.4.3"
pytest-cov = "^2.8.1"
flake8 = "^3.8.4"
pytest-pythonpath = "^0.7.3"
pytest-env = "^0.6.2"
yapf = "^0.31.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
